--- a/src/main/resources/css/dialog-box.css
+++ b/src/main/resources/css/dialog-box.css
@@ -20,6 +20,14 @@
     -fx-font-family: 'monospace';
 }
 
+.success-label {
+    -fx-border-color: palegreen;
+}
+
+.error-label {
+    -fx-border-color: #F44336
+}
+
 #displayPicture {
     /* Shadow effect on image. */
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0.5, 5, 5);
